--- a/reading/Programing/版本控管基本知識.md
+++ b/reading/Programing/版本控管基本知識.md
@@ -3,7 +3,7 @@
 
 ## Name rule of Version
 
-An example of version:
+For example, version of some_project will set like this:
 ```
 some_project ver. 1.2.3
 ```
@@ -21,10 +21,12 @@ some_project ver. 1.2.3
 
     The third num of version call **patch**.
     Add when the project Fixed some bug.
-    
-    
+        
+When patch deploy at GitHub, merge the develop branch to master(main, the lastest stable version of your project) and then checkout a new branch which named by version(e.g. 1.2.3), add a tag of version and write down the update descriptions.
+
     
 
 ## Reference
 
 1. [版本號命名規則](https://www.slmt.tw/blog/2015/07/19/version-number-naming-convention/)
+2. [猴子都能懂的 git](https://backlog.com/git-tutorial/tw/)
