--- a/reading/Python/Basic/函式基本概念.md
+++ b/reading/Python/Basic/函式基本概念.md
@@ -1,5 +1,5 @@
 # What is function
-函式是程式語言當中降低重工的一大語法，寫出優質的函示能提升整體軟體架構以及提升可維護性、可讀性，是合作必備的基礎技能。   
+函式是程式語言當中**降低重工**的一大語法，寫出優質的函示能**提升整體軟體架構**以及**提升可維護性**、**可讀性**，是合作必備的基礎技能。   
 以下重點介紹參考文獻的這五個重點，並寫下重點心得:
 - 函式(Function)結構
   > 函式基本結構與知識
@@ -17,6 +17,8 @@
 > 變數、函式都有生命週期，所謂的生命周期指的就是該函式、變數，可以被呼叫(還活著的感覺)的範圍，超出生命週期代表無法被呼叫(如同死了)，一般分為:   
 > 1. 全域 Global
 > 1. 局域 Local
+> ## 重工
+> 重複代碼一直撰寫稱之為重工，重複使用到的相同代碼若需維護，需要在多處進行維護，此種情況稱為**可維護性低**。因此將重複代碼整合成一個 function 統一進行維護管理，是**提升可維護性**。
 > ## Reference 
 > [函式的五個基本常識](https://www.learncodewithmike.com/2019/12/python-function.html)   
 > 在寫程式碼時有一個非常重要的觀念是DRY(Don’t Repeat Yourself)，意思是避免同樣的程式碼重複出現在很多個地方，除了可讀性很低外，也不易維護。所以要適當的進行封裝，來達到程式碼的重用性(Reusable)。
