--- a/tutorial/tetsu/TetsuHelloWorld.ipynb
+++ b/tutorial/tetsu/TetsuHelloWorld.ipynb
@@ -53,6 +53,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'0,1,2,3,4,5,6,7,8,9'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "source": [
+    "\",\".join([str(i) for i in range(10)])"
+   ]
+  },
+  {
    "source": [
     "### 以前的作法\n",
     "冗長，而且串接方式邏輯上不通順"
@@ -62,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +93,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 3
     }
    ],
    "source": [
